--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,14 @@
+form.login_form {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 450px;
+    background-color: #ffcc00;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 10px;
+}
+
 h1 {
-   color: #d22e3a
-}
-body{
-    background-color: #000000
-}
-p {
-    background-color: maroon;
-    color: red;
+    text-align: center;
+    color: #d22e3a
 }
